--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-4 text-center mb-4">
-                    <img src="f1.png" class="profile-img rounded-circle" alt="Profile Picture">
+                    <img src="f1.jpg" class="profile-img rounded-circle" alt="Profile Picture">
                 </div>
                 <div class="col-lg-8">
                     <div class="bg-custom">
@@ -554,3 +554,4 @@
 </body>
 
 </html>
+
