--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
             <h2 class="section-title text-center mb-5">Sosial Media</h2>
             
             <div class="text-center">
-                <a href="https://www.youtube.com/@RezaaRawr target="_blank" class="social-icon"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.youtube.com/@RezaaRawr" target="_blank" class="social-icon"><i class="fab fa-youtube"></i></a>
                 <a href="https://www.instagram.com/rezzzsaa7?igsh=MXB0dXpudTg3eXg5aw==" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
                 <a href="https://github.com/rezaasigma" target="_blank" class="social-icon"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/muhammad-thoriza-ma-ali-91861237b/" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
@@ -554,4 +554,5 @@
 </body>
 
 </html>
+
 
